--- a/AppStoreInteractiveTransition/Base.lproj/Main.storyboard
+++ b/AppStoreInteractiveTransition/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.3.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mVn-Fv-g8o">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vSr-Ka-Re9">
                                     <size key="itemSize" width="50" height="50"/>
@@ -98,15 +96,25 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WNT-bf-7C5">
+                                                <rect key="frame" x="171.5" y="300" width="32" height="30"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <state key="normal" title="Next"/>
+                                                <connections>
+                                                    <action selector="buttonTapped:" destination="g74-Ce-LeC" eventType="touchUpInside" id="JoO-pP-Po5"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="Dli-YQ-xEV" firstAttribute="top" secondItem="pDp-yd-8Eg" secondAttribute="bottom" id="0iV-Fe-KOe"/>
                                             <constraint firstItem="Dli-YQ-xEV" firstAttribute="leading" secondItem="dfv-KB-fDy" secondAttribute="leading" id="7No-FP-pIg"/>
+                                            <constraint firstItem="WNT-bf-7C5" firstAttribute="centerX" secondItem="dfv-KB-fDy" secondAttribute="centerX" id="Dgj-Ml-3Ck"/>
                                             <constraint firstItem="FeJ-8y-Dnu" firstAttribute="leading" secondItem="dfv-KB-fDy" secondAttribute="leading" id="KT5-ev-YNi"/>
                                             <constraint firstItem="pDp-yd-8Eg" firstAttribute="width" secondItem="FeJ-8y-Dnu" secondAttribute="width" id="Oge-pe-2yf"/>
                                             <constraint firstAttribute="bottom" secondItem="Dli-YQ-xEV" secondAttribute="bottom" id="QND-c6-3ip"/>
                                             <constraint firstItem="pDp-yd-8Eg" firstAttribute="height" secondItem="FeJ-8y-Dnu" secondAttribute="height" id="QUD-08-qgy"/>
+                                            <constraint firstItem="WNT-bf-7C5" firstAttribute="top" secondItem="dfv-KB-fDy" secondAttribute="top" constant="300" id="RuJ-Po-j0H"/>
                                             <constraint firstItem="pDp-yd-8Eg" firstAttribute="centerX" secondItem="dfv-KB-fDy" secondAttribute="centerX" id="SXC-sW-hLw"/>
                                             <constraint firstItem="FeJ-8y-Dnu" firstAttribute="top" secondItem="dfv-KB-fDy" secondAttribute="top" priority="999" id="T1I-xI-SlP"/>
                                             <constraint firstAttribute="trailing" secondItem="Dli-YQ-xEV" secondAttribute="trailing" id="Wwv-Ua-3x9"/>
@@ -144,11 +152,20 @@
                         <outlet property="cardContentView" destination="FeJ-8y-Dnu" id="tdB-Ns-lnU"/>
                         <outlet property="scrollView" destination="ccE-rS-dbv" id="C4i-Mz-K62"/>
                         <outlet property="textView" destination="Dli-YQ-xEV" id="hat-vm-qvp"/>
+                        <segue destination="Fkt-Xv-Cmc" kind="presentation" identifier="showModalView" id="HHw-mo-CKD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g9U-8C-281" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="855" y="42"/>
+            <point key="canvasLocation" x="961" y="60"/>
+        </scene>
+        <!--Modal View Controller-->
+        <scene sceneID="zt7-re-mUx">
+            <objects>
+                <viewController id="Fkt-Xv-Cmc" customClass="ModalViewController" customModule="AppStoreInteractiveTransition" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vdN-4X-Ds4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1774" y="60"/>
         </scene>
     </scenes>
     <resources>
